samples/_failures_safe/1761140203_debae0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8512df6.c: In function ‘main’:
./samples/SAFE/__tmp_f8512df6.c:163:25: error: ‘entry’ undeclared (first use in this function); did you mean ‘entries’?
  163 |     for (int i = 0; i < entry
      |                         ^~~~~
      |                         entries
./samples/SAFE/__tmp_f8512df6.c:163:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f8512df6.c:163:30: error: expected ‘;’ at end of input
  163 |     for (int i = 0; i < entry
      |                              ^
      |                              ;
./samples/SAFE/__tmp_f8512df6.c:163:5: error: expected declaration or statement at end of input
  163 |     for (int i = 0; i < entry
      |     ^~~
